--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+matplotlib==3.4.3
+pandas==1.3.4
+pydotplus==2.0.2
 pyspark==3.2.0
 scikit-learn==1.0.1
-xgboost==1.5.0
 tensorflow==2.6.0
+xgboost==1.5.0
