--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 matplotlib==3.5.2
-pandas==1.4.2
+pandas==1.4.3
+PuLP==2.6.0
 pydotplus==2.0.2
-pyspark==3.2.1
-s3fs==2022.3.0
-scikit-learn==1.0.2
-tensorflow==2.8.0
-xgboost==1.6.0
+pyspark==3.3.0.
+s3fs==2022.5.0
+scikit-learn==1.1.1
+tensorflow==2.9.1
+xgboost==1.6.1
