--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ cython_debug/
 
 data/
 src/data-science/regressao-linear/modelo_consumo_cerveja
+src/data-science/regressao-linear/exercicios/modelo_preco
