create regressao linear (#5)
* create regressao linear

box plot

pairplot

reg

estimate

* wip

* wip

* iniciando "comparando modelos"

* finaliza regressao linear

* exercicios

* exercicios

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ dmypy.json
 cython_debug/
 
 data/
+src/data-science/regressao-linear/modelo_consumo_cerveja
+src/data-science/regressao-linear/exercicios/modelo_preco
