--- a/llm-test-with-gpu/app/requirements.txt
+++ b/llm-test-with-gpu/app/requirements.txt
@@ -3,3 +3,15 @@ transformers
 accelerate
 flask
 flask-cors
+python-dotenv
+bitsandbytes
+autoawq
+auto-gptq
+optimum
+einops
+sentencepiece
+safetensors
+numpy
+protobuf
+llama-cpp-python
+huggingface-hub
